--- a/octocat-downloader/pom.xml
+++ b/octocat-downloader/pom.xml
@@ -17,11 +17,11 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <kotlin.version>1.1.51</kotlin.version>
+        <kotlin.version>1.2.10</kotlin.version>
         <junit.version>4.12</junit.version>
         <fuel.version>1.11.0</fuel.version>
         <result.version>1.2.0</result.version>
-        <jackson.version>2.9.2</jackson.version>
+        <jackson.version>2.9.3</jackson.version>
         <rome.version>1.8.0</rome.version>
         <logback.version>1.2.3</logback.version>
         <jsoup.version>1.10.3</jsoup.version>
@@ -36,6 +36,11 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jre8</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-reflect</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
         <dependency>
