--- a/octocat-downloader/pom.xml
+++ b/octocat-downloader/pom.xml
@@ -25,6 +25,7 @@
         <rome.version>1.8.0</rome.version>
         <logback.version>1.2.3</logback.version>
         <jsoup.version>1.10.3</jsoup.version>
+        <aws.sdk.version>1.11.255</aws.sdk.version>
     </properties>
 
     <dependencies>
@@ -82,6 +83,10 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -149,5 +154,17 @@
             <url>https://jcenter.bintray.com</url>
         </pluginRepository>
     </pluginRepositories>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.amazonaws</groupId>
+                <artifactId>aws-java-sdk-bom</artifactId>
+                <version>${aws.sdk.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
